@@ -10,7 +10,8 @@ Drupal: 4.5
 DESCRIPTION:
 
 This module allows you to generate printer friendly versions of
-any node by navigating to example.com/node/print/[node id | node title].
+any node by navigating to www.example.com/node/nid/print, where nid
+is the node id of content to render.
 
 ********************************************************************
 INSTALLATION:
@@ -20,9 +21,8 @@ see the INSTALL.txt file in this directory.
 ********************************************************************
 TODO:
 
-- code cleanup
-- add ability to optionally attach comments to nodes for printing
-- custom print.css
+- Add ability to optionally attach comments to nodes for printing
+  by calling comment_render().
 
 ********************************************************************
 UPCOMING FEATURES:
